corrected some text

--- a/about/index.html
+++ b/about/index.html
@@ -60,7 +60,7 @@
                         <ol>
                             <li>I can help people.</li>
                             <li>I can make people smile.</li>
-                            <li>people are happy to have me around them.</li>
+                            <li>people are happy to have me around them, and so on.</li>
                         </ol>
                     </div>
                 </div>
