I added the powercoders link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div style="margin-top: 30px;">
                 <br>
-                <span class="tsigu">I am Tsigereda, 24 years old. I am studying Bachelor in Computer Science. Besides I am taking a Web Design Course by Powercoders. I have the eagerness to work in the IT field. <a href="about/index.html">Read more about me</a>.</span></div>
+                <span class="tsigu">I am Tsigereda, 24 years old. I am studying Bachelor in Computer Science. Besides I am taking a Web Design Course by <a href="http://powercoders.org/">Powercoders</a>. I have the eagerness to work in the IT field. <a href="about/index.html">Read more about me</a>.</span></div>
                 <div  style="margin-top: 30px;"> 
                 <br>
                 <span class="tsigu">If you are interested, you can reach me <a href="contact/index.html">here</a>.</span>
