--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <header>
-        <h1>Tsigereda Nebai</h1>
+        <h1 class="h11">Tsigereda Nebai</h1>
     </header>
     <nav class="navbar navbar-inverse">
         <div class="container">
