I added the powercoders link my father's name in the home page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <header class="header">
-        <h1 id="header"> Hi, I am Tsigereda.</h1>
+        <h1 id="header"> Hi, I am Tsigereda Nebai.</h1>
         <p id="h1">Student, Bachelor in Computer Science</p>
     </header>
     <nav class="navbar navbar-inverse">
