I added one nav project, some pictures to my project and did the exercise from Wendesday/22/11/2017

--- a/about/index.html
+++ b/about/index.html
@@ -13,6 +13,7 @@
     <link href="../css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -21,7 +22,7 @@
     <![endif]-->
 </head>
 
-<body>
+<body style="width: 100%;">
     <header>
         <h1 class="h11">Tsigereda Nebai</h1>
     </header>
@@ -40,6 +41,7 @@
                     <li><a href="../index.html">Home</a></li>
                     <li class="active"><a href="index.html">About Me</a></li>
                     <li><a href="../contact/index.html">Contact</a></li>
+                    <li><a href="../project/json_starter.html">Project</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -52,7 +54,7 @@
                     <img src="../image/IMG-89542.jpg" alt="Tsigereda" class="img-thumbnail">
                 </div>
                 <div class="col-xs-12 col-md-6">
-                    <p>I am Tsigereda Nebai, 24 years old. I am a student in powercoders, and I am studying Computer Science too. I love the IT- World so much and I want to learn and work in it.</p>
+                    <p>I am Tsigereda Nebai, 24 years old. I am a student in <a href="powercoders.org">Powercoders</a>, and I am studying Bachelor in Computer Science at <a href="https://my.uopeople.edu">UoPeople</a> (online) too. I love the IT- World so much and I want to learn and work in it.</p>
                     <p>I studied Computer Engineering in Eritrea for three years, unfortunately I could not finish it because of some personal cases.</p>
                     <p>I am orginally from Eritrea, but I live now in Switzerland. I love my homeland so much. It is the only place I love in the world because my family live there and <strong>they are my world</strong>.</p>
                     <p>I want to help people with all the means I can.</p>
