--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet">
@@ -42,6 +43,7 @@
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="about/index.html">About Me</a></li>
                     <li><a href="contact/index.html">Contact</a></li>
+                    <li><a href="project/json_starter.html">Project</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -63,6 +65,10 @@
                 <div  style="margin-top: 30px;"> 
                 <br>
                 <span class="tsigu">If you are interested, you can reach me <a href="contact/index.html">here</a>.</span>
+                </div>
+                <div  style="margin-top: 30px;"> 
+                <br>
+                <span class="tsigu">You can aslo see my projects <a href="project/json_starter.html">here</a>.</span>
                 </div>
                 <br>
                 <br>
