--- a/contact/index.html
+++ b/contact/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Contact | Tsigereda</title>
 
@@ -39,6 +40,7 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../about/index.html">About Me</a></li>
                     <li class="active"><a href="index.html">Contact</a></li>
+                    <li><a href="../project/json_starter.html">Project</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
