changed the content of the project by removing the exercise vidoes

--- a/project/index.html
+++ b/project/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
       <header>
-          <h1>Tsigereda Nebai</h1>
+          <h1 class="h11">Tsigereda Nebai</h1>
       </header>
  <nav class="navbar navbar-inverse">
       <div class="container">
@@ -44,7 +44,42 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-      <footer></footer>
+     <div class="container">
+      <div class="col-xs-12 col-md-10" style="margin-top: 15px;">
+            <h2>Pictures I took</h2>
+            <div class="row">
+            <div class="col-xs-12 col-md-5">
+                <img src="../image/IMG-8553.JPG" alt="obersee" width="100%" class="pics">
+            </div>
+            <div  class="col-xs-12 col-md-5">
+                <img src="../image/IMG-8554.JPG" alt="obersee" width="100%" class="pics">
+            </div>
+            </div>
+            <div class="row">
+            <div  class="col-xs-12 col-md-5">
+                <img src="../image/IMG-8418.JPG" alt="obersee" width="100%" class="pics">
+            </div>
+            <div  class="col-xs-12 col-md-5">
+                <img src="../image/IMG-8560.JPG" alt="obersee" width="100%" class="pics">
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-1">
+            <span style="line-height: 1.4em; margin-left: : 40px;" id="tsigu">
+                    <p><strong>Be Social</strong></p>
+                    <a href="https://plus.google.com/u/0/103725301072350335537" class="facetwitt"><img src="https://image.flaticon.com/icons/svg/145/145804.svg" width="50px"></a>   
+                     <a href="https://www.instagram.com/agida93lve/" class="facetwitt"><img src="https://image.flaticon.com/icons/svg/174/174855.svg" width="50px"></a>  
+                       <a href="https://www.linkedin.com/in/tsigereda-nebai-027591131/" class="facetwitt"><img src="https://image.flaticon.com/icons/svg/124/124011.svg" width="50px"></a>    
+                       <a href="https://twitter.com/agida14" class="facetwitt"><img src="https://image.flaticon.com/icons/svg/145/145812.svg" width="50px"></a>     <a href="https://www.facebook.com/nebai.ts" class="facetwitt"><img src="https://image.flaticon.com/icons/svg/124/124010.svg" width="50px"></a>
+                </span>
+        </div>
+      </div>
+    <br>
+    <div style="border: solid 1px black; bottom: 0; background: black; color: white; padding-left: 100px;">
+        <footer>
+            <p>©copy right 2017 tsigereda </p>
+        </footer>
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
