I added some text to my about folder

--- a/about/index.html
+++ b/about/index.html
@@ -73,8 +73,10 @@
                         <h3>Skills and Knowledges</h3>
                         <ul style="text-align: left;">
                             <li>C++, C, Python, Datastructure and Algorithm,</li>
+                            <li>HTML, CSS, Javascript</li>
                             <li>Microsoft office, Photoshop, Video Editing(Priemere Pro+Pinnacle)</li>
                             <li>Computer Maintenance</li>
+                            
                         </ul>
                     </div>
                     <div class="col-xs-12 col-md-3">
