--- a/about/index.html
+++ b/about/index.html
@@ -41,7 +41,7 @@
                     <li><a href="../index.html">Home</a></li>
                     <li class="active"><a href="index.html">About Me</a></li>
                     <li><a href="../contact/index.html">Contact</a></li>
-                    <li><a href="../project/json_starter.html">Project</a></li>
+                    <li><a href="../project/index.html">Project</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
