--- a/contact/index.html
+++ b/contact/index.html
@@ -40,7 +40,7 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../about/index.html">About Me</a></li>
                     <li class="active"><a href="index.html">Contact</a></li>
-                    <li><a href="../project/json_starter.html">Project</a></li>
+                    <li><a href="../project/index.html">Project</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
