--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="about/index.html">About Me</a></li>
                     <li><a href="contact/index.html">Contact</a></li>
-                    <li><a href="project/json_starter.html">Project</a></li>
+                    <li><a href="project/index.html">Project</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -68,7 +68,7 @@
                 </div>
                 <div  style="margin-top: 30px;"> 
                 <br>
-                <span class="tsigu">You can aslo see my projects <a href="project/json_starter.html">here</a>.</span>
+                <span class="tsigu">You can aslo see my projects <a href="project/index.html">here</a>.</span>
                 </div>
                 <br>
                 <br>
