I improved my web page depending on the comments from today

--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="about/index.html">About Me</a></li>
                     <li><a href="contact/index.html">Contact</a></li>
-                    <li><a href="project/index.html">Project</a></li>
+                    <li><a href="project/index.html">Gallery</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
         </div>
     </nav>
+    <br>
+    <br>
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-10">
@@ -86,7 +88,7 @@
             </div>
         </div>
     </div>
-    <div style="border: solid 1px black; bottom: 0; background: black; color: white; padding-left: 100px;" >
+     <div style="border: solid 1px black; text-align: center; background: black; color: white; padding-left: 100px;" >
      <footer> <p>©copy right 2017  tsigereda </p></footer>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
