--- a/about/index.html
+++ b/about/index.html
@@ -41,12 +41,14 @@
                     <li><a href="../index.html">Home</a></li>
                     <li class="active"><a href="index.html">About Me</a></li>
                     <li><a href="../contact/index.html">Contact</a></li>
-                    <li><a href="../project/index.html">Project</a></li>
+                    <li><a href="../project/index.html">Gallery</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
         </div>
     </nav>
+    <br>
+    <br>
     <div class="container">
         <div class="col-xs-12 col-md-11">
             <div class="row">
@@ -58,19 +60,14 @@
                     <p>I studied Computer Engineering in Eritrea for three years, unfortunately I could not finish it because of some personal cases.</p>
                     <p>I am orginally from Eritrea, but I live now in Switzerland. I love my homeland so much. It is the only place I love in the world because my family live there and <strong>they are my world</strong>.</p>
                     <p>I want to help people with all the means I can.</p>
-                    <h3>I get satisfied if:-</h3>
-                        <ol>
-                            <li>I can help people.</li>
-                            <li>I can make people smile.</li>
-                            <li>people are happy to have me around them, and so on.</li>
-                        </ol>
+                    <p>I get satisfied if I can help people, I can make them smile, and they are happy to have me around them, and so on.</p>
                     </div>
                 </div>
                 <br>
                 <br>
                 <div class="row">
                     <div class="col-xs-12 col-md-4">
-                        <h3>Skills and Knowledges</h3>
+                        <h3 style="padding-left:40px; ">Skills and Knowledges</h3>
                         <ul style="text-align: left;">
                             <li>C++, C, Python, Datastructure and Algorithm,</li>
                             <li>HTML, CSS, Javascript</li>
@@ -80,7 +77,7 @@
                         </ul>
                     </div>
                     <div class="col-xs-12 col-md-3">
-                        <h3>Languages</h3>
+                        <h3 style="padding-left:40px; ">Languages</h3>
                         <ul style="text-align: left;">
                             <li>Tigrigna (Mother language)</li>
                             <li>Amharic (Intermidiate)</li>
@@ -89,7 +86,7 @@
                         </ul>
                     </div>
                     <div class="col-xs-12 col-md-3">
-                        <h3>Hobbies</h3>
+                        <h3 style="padding-left:40px; ">Hobbies</h3>
                         <ul style="text-align: left;">
                             <li>Volleyball</li>
                             <li>Cycling</li>
@@ -119,7 +116,7 @@
 
 
         </div>
-        <div style="border: solid 1px black; bottom: 0; background: black; color: white; padding-left: 100px;">
+         <div style="border: solid 1px black; text-align: center; background: black; color: white; padding-left: 100px;" >
             <footer>
                 <p>©copy right 2017 tsigereda </p>
             </footer>
