--- a/contact/index.html
+++ b/contact/index.html
@@ -35,17 +35,19 @@
             <span class="icon-bar"></span>
           </button>
             </div>
-            <div id="navbar" class="collapse navbar-collapse">
+            <div id="navbar" class="collapse navbar-collapse" style="padding-left: 0px;">
                 <ul class="nav navbar-nav">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../about/index.html">About Me</a></li>
                     <li class="active"><a href="index.html">Contact</a></li>
-                    <li><a href="../project/index.html">Project</a></li>
+                    <li><a href="../project/index.html">Gallery</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
         </div>
     </nav>
+    <br>
+    <br>
     <div class="container">
        <div class="row">
         <div class="col-xs-12 col-md-10">
@@ -69,11 +71,9 @@
                 <button class="btn btn-default" type="submit">Send</button>
             </div>
         </form>
+           </div>
         <br>
         <br>
-        <p>You find my address below.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2707.4439977944758!2d8.650647115618705!3d47.26657457916353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479aaf76f8152cf9%3A0xbe2ade0117bbce0e!2sAlte+Landstrasse+6%2C+8706+Meilen!5e0!3m2!1sen!2sch!4v1510079844004" width="100%" height="450" frameborder="0" style="border:2px" allowfullscreen></iframe>
-    </div>
  
    <div class="col-xs-12 col-md-1">
             <span style="line-height: 1.4em; margin-left: : 40px;" id="tsigu" >
@@ -85,10 +85,18 @@
                 </span>
         </div>
         </div>
-        </div>
+    </div>
     <br>
     <br>
-     <div style="border: solid 1px black; bottom: 0; background: black; color: white; padding-left: 100px;" >
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+     <div style="border: solid 1px black; text-align: center; background: black; color: white; padding-left: 100px;" >
      <footer > <p>©copy right 2017  tsigereda </p></footer>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
