--- a/project/index.html
+++ b/project/index.html
@@ -5,64 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Project   |   Tsigereda</title>
+    <title>Project | Tsigereda</title>
 
     <!-- Bootstrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    
-  </head>
-  <body>
-      <header>
-          <h1 class="h11">Tsigereda Nebai</h1>
-      </header>
- <nav class="navbar navbar-inverse">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+
+</head>
+
+<body>
+    <header>
+        <h1 class="h11">Tsigereda Nebai</h1>
+    </header>
+    <nav class="navbar navbar-inverse">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../about/index.html">About</a></li>
+                    <li><a href="../contact/index.html">Contact</a></li>
+                    <li class="active"><a href="index.html">Gallery</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../about/index.html">About</a></li>
-            <li><a href="../contact/index.html">Contact</a></li>
-              <li class="active"><a href="index.html">Project</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
     </nav>
-     <div class="container">
-      <div class="col-xs-12 col-md-10" style="margin-top: 15px;">
+    <br>
+    <br>
+    <div class="container">
+        <div class="col-xs-12 col-md-10" style="margin-top: 15px;">
             <h2>Pictures I took</h2>
             <div class="row">
-            <div class="col-xs-12 col-md-5">
-                <img src="../image/IMG-8553.JPG" alt="obersee" width="100%" class="pics">
-            </div>
-            <div  class="col-xs-12 col-md-5">
-                <img src="../image/IMG-8554.JPG" alt="obersee" width="100%" class="pics">
-            </div>
+                <div class="col-xs-12 col-md-5">
+                    <img src="../image/IMG-8553.JPG" alt="obersee" width="100%" class="pics">
+                </div>
+                <div class="col-xs-12 col-md-5">
+                    <img src="../image/IMG-8554.JPG" alt="obersee" width="100%" class="pics">
+                </div>
             </div>
             <div class="row">
-            <div  class="col-xs-12 col-md-5">
-                <img src="../image/IMG-8418.JPG" alt="obersee" width="100%" class="pics">
+                <div class="col-xs-12 col-md-5">
+                    <img src="../image/IMG-8560.JPG" alt="obersee" width="100%" class="pics">
+                </div>
+                <div class="col-xs-12 col-md-5">
+                    <img src="../image/IMG-8418.JPG" alt="obersee" width="100%" class="pics">
+                </div>
+
             </div>
-            <div  class="col-xs-12 col-md-5">
-                <img src="../image/IMG-8560.JPG" alt="obersee" width="100%" class="pics">
-            </div>
-          </div>
         </div>
         <div class="col-xs-12 col-md-1">
             <span style="line-height: 1.4em; margin-left: : 40px;" id="tsigu">
@@ -73,9 +78,13 @@
                        <a href="https://twitter.com/agida14" class="facetwitt"><img src="https://image.flaticon.com/icons/svg/145/145812.svg" width="50px"></a>     <a href="https://www.facebook.com/nebai.ts" class="facetwitt"><img src="https://image.flaticon.com/icons/svg/124/124010.svg" width="50px"></a>
                 </span>
         </div>
-      </div>
+    </div>
     <br>
-    <div style="border: solid 1px black; bottom: 0; background: black; color: white; padding-left: 100px;">
+    <br>
+    <br>
+    <br>
+
+    <div style="border: solid 1px black; text-align: center; background: black; color: white; padding-left: 100px;">
         <footer>
             <p>©copy right 2017 tsigereda </p>
         </footer>
@@ -84,5 +93,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../js/bootstrap.min.js"></script>
-  </body>
+</body>
 </html>
