I made the footer fixed and changed the bullet to dash

--- a/about/index.html
+++ b/about/index.html
@@ -67,8 +67,8 @@
                 <br>
                 <div class="row">
                     <div class="col-xs-12 col-md-4">
-                        <h3 style="padding-left:40px; ">Skills and Knowledges</h3>
-                        <ul style="text-align: left;">
+                        <h3>Skills and Knowledges</h3>
+                        <ul class="nobullet" >
                             <li>C++, C, Python, Datastructure and Algorithm,</li>
                             <li>HTML, CSS, Javascript</li>
                             <li>Microsoft office, Photoshop, Video Editing(Priemere Pro+Pinnacle)</li>
@@ -76,18 +76,18 @@
                             
                         </ul>
                     </div>
-                    <div class="col-xs-12 col-md-3">
-                        <h3 style="padding-left:40px; ">Languages</h3>
-                        <ul style="text-align: left;">
+                    <div class="col-xs-12 col-md-3" style="margin-left:40px;">
+                        <h3>Languages</h3>
+                        <ul class="nobullet">
                             <li>Tigrigna (Mother language)</li>
                             <li>Amharic (Intermidiate)</li>
                             <li>English (Intermidiate)</li>
                             <li>German (C1 level)</li>
                         </ul>
                     </div>
-                    <div class="col-xs-12 col-md-3">
-                        <h3 style="padding-left:40px; ">Hobbies</h3>
-                        <ul style="text-align: left;">
+                    <div class="col-xs-12 col-md-3" style="margin-left:40px; ">
+                        <h3>Hobbies</h3>
+                        <ul class="nobullet">
                             <li>Volleyball</li>
                             <li>Cycling</li>
                             <li>Hiking</li>
@@ -109,14 +109,12 @@
                 </span>
             </div>
 
-            <br>
-            <br>
-            <br>
-            <br>
-
 
         </div>
-         <div style="border: solid 1px black; text-align: center; background: black; color: white; padding-left: 100px;" >
+        <br>
+        <br>
+        <br>
+         <div>
             <footer>
                 <p>©copy right 2017 tsigereda </p>
             </footer>
