--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
             </div>
         </div>
     </div>
-     <div style="border: solid 1px black; text-align: center; background: black; color: white; padding-left: 100px;" >
+    <br>
+    <br>
+     <div>
      <footer> <p>©copy right 2017  tsigereda </p></footer>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
