--- a/project/index.html
+++ b/project/index.html
@@ -53,18 +53,18 @@
             <h2>Pictures I took</h2>
             <div class="row">
                 <div class="col-xs-12 col-md-5">
-                    <img src="../image/IMG-8553.JPG" alt="obersee" width="100%" class="pics">
+                    <a href="../image/IMG-8553.JPG"><img src="../image/IMG-8553.JPG" alt="obersee" width="100%" class="pics"></a>
                 </div>
                 <div class="col-xs-12 col-md-5">
-                    <img src="../image/IMG-8554.JPG" alt="obersee" width="100%" class="pics">
+                    <a href="../image/IMG-8554.JPG"><img src="../image/IMG-8554.JPG" alt="obersee" width="100%" class="pics"></a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-md-5">
-                    <img src="../image/IMG-8560.JPG" alt="obersee" width="100%" class="pics">
+                    <a href="../image/IMG-8560.JPG"><img src="../image/IMG-8560.JPG" alt="obersee" width="100%" class="pics"></a>
                 </div>
                 <div class="col-xs-12 col-md-5">
-                    <img src="../image/IMG-8418.JPG" alt="obersee" width="100%" class="pics">
+                    <a href="../image/IMG-8418.JPG"><img src="../image/IMG-8418.JPG" alt="obersee" width="100%" class="pics"></a>
                 </div>
 
             </div>
@@ -79,12 +79,9 @@
                 </span>
         </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
+  
 
-    <div style="border: solid 1px black; text-align: center; background: black; color: white; padding-left: 100px;">
+    <div>
         <footer>
             <p>©copy right 2017 tsigereda </p>
         </footer>
