--- a/contact/index.html
+++ b/contact/index.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
           </button>
             </div>
-            <div id="navbar" class="collapse navbar-collapse" style="padding-left: 0px;">
+            <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../about/index.html">About Me</a></li>
@@ -72,9 +72,6 @@
             </div>
         </form>
            </div>
-        <br>
-        <br>
- 
    <div class="col-xs-12 col-md-1">
             <span style="line-height: 1.4em; margin-left: : 40px;" id="tsigu" >
                     <p><strong>Be Social</strong></p>
@@ -86,17 +83,8 @@
         </div>
         </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-     <div style="border: solid 1px black; text-align: center; background: black; color: white; padding-left: 100px;" >
+
+     <div>
      <footer > <p>©copy right 2017  tsigereda </p></footer>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
