I added a margin to the project page

--- a/project/index.html
+++ b/project/index.html
@@ -48,7 +48,7 @@
     </nav>
     <br>
     <br>
-    <div class="container">
+    <div class="container" style="margin-bottom: 55px">
         <div class="col-xs-12 col-md-10" style="margin-top: 15px;">
             <h2>Pictures I took</h2>
             <div class="row">
@@ -85,14 +85,6 @@
                     <a href="../image/IMG-9338.JPG"><img src="../image/IMG-9338.JPG" alt="obersee" width="100%" class="pics"></a>
                 </div>
             </div>
-        </div>
-        <div>
-            <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
         </div>
         
         <div class="col-xs-12 col-md-1">
