--- a/about/index.html
+++ b/about/index.html
@@ -49,7 +49,7 @@
     </nav>
     <br>
     <br>
-    <div class="container">
+    <div class="container" style="margin-bottom: 40px;">
         <div class="col-xs-12 col-md-11">
             <div class="row">
                 <div class="col-xs-12 col-md-5">
@@ -111,9 +111,6 @@
 
 
         </div>
-        <br>
-        <br>
-        <br>
          <div>
             <footer>
                 <p>©copy right 2017 tsigereda </p>
