I worked on some pages making them responsive

--- a/contact/index.html
+++ b/contact/index.html
@@ -48,7 +48,7 @@
     </nav>
     <br>
     <br>
-    <div class="container">
+    <div class="container cont">
        <div class="row">
         <div class="col-xs-12 col-md-10">
 
