--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </nav>
     <br>
     <br>
-    <div class="container" style="margin-bottom: 20px;">
+    <div class="container cont">
         <div class="row">
             <div class="col-xs-12 col-md-10">
               <h3>My Favorite Quotes</h3>
