--- a/project/index.html
+++ b/project/index.html
@@ -48,7 +48,7 @@
     </nav>
     <br>
     <br>
-    <div class="container" style="margin-bottom: 55px">
+    <div class="container cont">
         <div class="col-xs-12 col-md-10" style="margin-top: 15px;">
             <h2>Pictures I took</h2>
             <div class="row">
