--- a/about/index.html
+++ b/about/index.html
@@ -49,10 +49,10 @@
     </nav>
     <br>
     <br>
-    <div class="container" style="margin-bottom: 40px;">
+    <div class="container cont">
         <div class="col-xs-12 col-md-11">
             <div class="row">
-                <div class="col-xs-12 col-md-5">
+                <div class="col-xs-12 col-md-5 image">
                     <img src="../image/IMG-89542.jpg" alt="Tsigereda" class="img-thumbnail">
                 </div>
                 <div class="col-xs-12 col-md-6">
@@ -76,7 +76,7 @@
                             
                         </ul>
                     </div>
-                    <div class="col-xs-12 col-md-3" style="margin-left:40px;">
+                    <div class="col-xs-12 col-md-3" class="hobbies">
                         <h3>Languages</h3>
                         <ul class="nobullet">
                             <li>Tigrigna (Mother language)</li>
@@ -85,7 +85,7 @@
                             <li>German (C1 level)</li>
                         </ul>
                     </div>
-                    <div class="col-xs-12 col-md-3" style="margin-left:40px; ">
+                    <div class="col-xs-12 col-md-3" class="hobbies">
                         <h3>Hobbies</h3>
                         <ul class="nobullet">
                             <li>Volleyball</li>
