--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="about/index.html">About Me</a></li>
+                    <li><a href="about/index.html">About</a></li>
                     <li><a href="contact/index.html">Contact</a></li>
                     <li><a href="project/index.html">Gallery</a></li>
                 </ul>
