--- a/about/index.html
+++ b/about/index.html
@@ -40,7 +40,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="../index.html">Home</a></li>
                     <li class="active"><a href="index.html">About Me</a></li>
-                    <li><a href="../contact/index.html">Contact</a></li>
+                    <li><a href="../contact/index.php">Contact</a></li>
                     <li><a href="../project/index.html">Gallery</a></li>
                 </ul>
             </div>
