--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="about/index.html">About</a></li>
-                    <li><a href="contact/index.html">Contact</a></li>
+                    <li><a href="contact/index.php">Contact</a></li>
                     <li><a href="project/index.html">Gallery</a></li>
                 </ul>
             </div>
@@ -66,7 +66,7 @@
                 <span class="tsigu">I am Tsigereda, 24 years old. I am studying Bachelor in Computer Science. Besides I am taking a Web Design Course by <a href="http://powercoders.org/">Powercoders</a>. I have the eagerness to work in the IT field. <a href="about/index.html">Read more about me</a>.</span></div>
                 <div  style="margin-top: 30px;"> 
                 <br>
-                <span class="tsigu">If you are interested, you can reach me <a href="contact/index.html">here</a>.</span>
+                <span class="tsigu">If you are interested, you can reach me <a href="contact/index.php">here</a>.</span>
                 </div>
                 <div  style="margin-top: 30px;"> 
                 <br>
