--- a/project/index.html
+++ b/project/index.html
@@ -39,7 +39,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../about/index.html">About</a></li>
-                    <li><a href="../contact/index.html">Contact</a></li>
+                    <li><a href="../contact/index.php">Contact</a></li>
                     <li class="active"><a href="index.html">Gallery</a></li>
                 </ul>
             </div>
